--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,65 @@
-/* Put any custom CSS styles here.  */
-/* Be sure to delete the <style> tag in index.html if you want to use this stylesheet. */
-body {
-  margin: 0;
-  font-family: "Noto Sans", system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
-  min-height: 100vh;
-
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-}
-
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 1rem;
+}
+
+body {
+  font-family: 'Noto Sans', sans-serif;
+  background: linear-gradient(-27deg, #F9FAFB, #D2D6DB);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+img {
+  display: block;
+  width: 100%;
+  object-fit: contain;
+}
+
+.main {
+  padding: 0 1rem;
+}
+
+.testimonial-card-container {
+  background-color: #fff;
+  max-width: 340px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 200px;
+  border-radius: 8px;
+  padding: 1.5rem;
+  color: #525252;
+  font-weight: 400;
+  border: 1px solid #e6e6e6
+}
+
+.testimonial-author {
+  display: flex;
+  gap: 1rem;
+
+  .author-name {
+    font-size: 1.125rem;
+    font-weight: 600;
+    color: #171717;
+  }
+
+  .author-handle {
+    font-size: 14px;
+  }
+}
+
+.testimonial-content {
+  line-height: 1.5rem;
+  margin-top: 1rem
 }
 
 .credits {
-  color: #777;
-  position: fixed;
-  bottom: 24px;
-  left: 24px;
-  font-size: 11px;
+  margin-top: auto;
   text-align: center;
-}
-
-.credits a {
-  color: #000;
-  font-weight: bold;
 }
